--- a/.travis.yml
+++ b/.travis.yml
@@ -6,5 +6,19 @@ compiler: gcc
 sudo: required
 
 
-before_install: make install-dep-debian && make install-dep-dev-debian
+before_install:
+  - sudo add-apt-repository ppa:zoogie/sdl2-snapshots -y
+  - sudo apt-get update -qq -y
+  - sudo apt-get install libsdl2 libsdl2-dev
+  - wget http://www.libsdl.org/projects/SDL_image/release/SDL2_image-2.0.1.tar.gz
+  - tar -xf SDL2_image-2.0.1.tar.gz
+  - cd SDL2_image-2.0.0
+  - ./configure && make && sudo make install
+  - cd -
+  - wget https://www.libsdl.org/projects/SDL_mixer/release/SDL2_mixer-2.0.1.tar.gz
+  - tar -xf SDL2_mixer-2.0.1.tar.gz
+  - cd SDL2_mixer-2.0.1
+  - ./configure && make && sudo make install
+  - cd -
+
 install: make install-all
