--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ sudo: required
 
 before_install:
   - sudo apt-get update
-  - sudo apt-get upgrade
+  - sudo apt-get -y upgrade
   - make get-dep-debian-all
 
 install:
