--- a/tests/Makefile
+++ b/tests/Makefile
@@ -2,13 +2,19 @@ NAME := paphics
 
 CC := gcc
 CFLAGS :=
-LDFLAGS := -lm -l$(NAME) -lpthread -lsubunit -lrt -lcheck
+LDFLAGS := -l$(NAME) -lpthread -lsubunit -lrt -lcheck
+LOCAL_LDFLAGS := -lm
+TRAVIS_LDFLAGS := -lfloor
 
 C_FILES	:= $(wildcard ./*.c)
 O_FILES := $(C_FILES:./%.c=./%.o)
 
 ./%.o: ./%.c Makefile
-	$(CC) -o $@ -x c $< $(CFLAGS) $(LDFLAGS)
+ifeq ($(TRAVIS),)
+	$(CC) -o $@ -x c $< $(CFLAGS) $(LDFLAGS) $(LOCAL_LDFLAGS)
+else
+  $(CC) -o $@ -x c $< $(CFLAGS) $(LDFLAGS) $(TRAVIS_LDFLAGS)
+endif
 
 all: build test mrproper
 
