--- a/tests/Makefile
+++ b/tests/Makefile
@@ -2,22 +2,20 @@ NAME := paphics
 
 CC := gcc
 CFLAGS :=
-LDFLAGS := -lpaphics -L/usr/local/lib -lcheck -lpthread -lsubunit -lrt -lm
-
-INCLUDE := -I/usr/local/include
+LDFLAGS := -L/usr/local/lib -lpaphics -lcheck -lpthread -lsubunit -lrt -lm
 
 C_FILES	:= $(wildcard ./*.c)
 O_FILES := $(C_FILES:./%.c=./%.o)
 
 ./%.o: ./%.c Makefile
-	$(CC) $(CFLAGS) -x c $< $(LDFLAGS) $(INCLUDE) -o $@
+	$(CC) $(CFLAGS) -x c $< $(LDFLAGS) -o $@
 
 all: build test mrproper
 
 build: $(O_FILES) Makefile
 
 test:
-	$(O_FILES) $(LDFLAGS)
+	$(O_FILES)
 
 clean:
 
