Fix Travis build

--- a/tests/Makefile
+++ b/tests/Makefile
@@ -8,7 +8,7 @@ C_FILES	:= $(wildcard ./*.c)
 O_FILES := $(C_FILES:./%.c=./%.o)
 
 ./%.o: ./%.c Makefile
-	$(CC) $(CFLAGS) -x c $< $(LDFLAGS) -o $@
+	export LD_LIBRARY_PATH=$(LD_LIBRARY_PATH):/usr/local/lib $(CC) $(CFLAGS) -x c $< $(LDFLAGS) -o $@
 
 all: build test mrproper
 
