Fix Travis build

--- a/tests/Makefile
+++ b/tests/Makefile
@@ -8,13 +8,17 @@ C_FILES	:= $(wildcard ./*.c)
 O_FILES := $(C_FILES:./%.c=./%.o)
 
 ./%.o: ./%.c Makefile
-	export LD_LIBRARY_PATH=$(LD_LIBRARY_PATH):/usr/local/lib && $(CC) $(CFLAGS) -x c $< $(LDFLAGS) -o $@
+	$(CC) $(CFLAGS) -x c $< $(LDFLAGS) -o $@
 
-all: build test mrproper
+all: build test run mrproper
 
 build: $(O_FILES) Makefile
 
 test:
+  LD_LIBRARY_PATH=/usr/local/lib
+  export LD_LIBRARY_PATH
+
+run:
 	$(O_FILES)
 
 clean:
